--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
 </li>
 <li id="Film"> Film & tv
    <ul>
-      <li> Computers & Tables </li>
-	  <li> Cell Phones & Accsesories </li>
-	  <li> Cameras & Photos </li>
+      <li> Computers </li>
+	  <li> Cell Phones </li>
+	  <li> Cameras </li>
 	  <li> TV , Audio </li>
-	  <li> Video Games & Consoles </li>
+	  <li> Video Games </li>
 	</ul>
 </li>
 <li id="Home"> Home
    <ul>
       <li> Home Decor </li>
-	  <li> Home Improvement </li>
+	  <li> Home Improv </li>
 	  <li> Tools </li>
-	  <li> Kitchen,Dining & Bar </li>
-	  <li> Yard, Garden&Outdoor </li>
+	  <li> Kitchen/Dining </li>
+	  <li> Garden/Outdoor </li>
    </ul>
 </li>
 <li id="Sports"> Sports
@@ -64,16 +64,16 @@
 	   <li> Fishing </li>
 	   <li> Hunting </li>
 	   <li> Golf </li>
-	   <li> Exercise & Fitness </li>
+	   <li> Fitness </li>
 	</ul>
 </li>
 <li id="Motors"> Motors
     <ul>
 	   <li> Cars & Trucks </li>
 	   <li> Motorcycles </li>
-	   <li> Parts & Accsesories </li>
+	   <li> Parts </li>
 	   <li> Boats </li>
-	   <li> Other Vehicles </li>
+	   <li> Others </li>
 	</ul>
 </li>
         </div>
