--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 <li id="Home"> Home
    <ul>
       <li> Home Decor </li>
-	  <li> Home Improv </li>
+	  <li> Home Improv</li>
 	  <li> Tools </li>
-	  <li> Kitchen/Dining </li>
+	  <li> Kitchen/Dining  </li>
 	  <li> Garden/Outdoor </li>
    </ul>
 </li>
@@ -71,9 +71,9 @@
     <ul>
 	   <li> Cars & Trucks </li>
 	   <li> Motorcycles </li>
-	   <li> Parts </li>
+	   <li> Parts/Accse </li>
 	   <li> Boats </li>
-	   <li> Others </li>
+	   <li> Other </li>
 	</ul>
 </li>
         </div>
@@ -126,11 +126,11 @@
                     <div class="p-3 mb-2 bg-info text-white">
                 <div class='row'>
 
-                  <div class='col-12 col-sm-7'>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/-KR69gVosvk" 
-	           frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
-		   picture-in-picture" allowfullscreen></iframe>
-                  </div>
+                <div class='col-12 col-sm-7'>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-KR69gVosvk"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+                picture-in-picture" allowfullscreen></iframe>
+              </div>
 
                   <div class='col-md-5'>
                       <h2> Between Worlds </h2>
@@ -210,14 +210,55 @@
             </div>
 
 
-              <div class="footer">
-                <p> Footer</p>
-                </div>
+       <section>
+
+            <form action="info@thedrifterpro.com" method="post" enctype="text/plain">
+           <h1> Contact Us </h1><br><br>
+             Tittle : <input type="text" name="tittle" size=5 maxlength=5 required /> <p><br>
+             Name : <input type="text" name="name" size=35 maxlength=35 required /> <p>
+             City : <input type="text" name="city" size=35 maxlength=35 /> <p>
+             PostCode : <input type="text" name="postcode" size=10 maxlength=10 /> <p>
+             Home Phone : <input type="text" name="homephone" size=20 maxlength=20 required /> <p>
+             Mobile Phone : <input type="text" name="cellphone" size=20 maxlength=20 required /> <p>
+             E-mail Address : <input type="text" name="email" size=30 maxlength=30 required /> <p>
+          <br>
+            Sign up for newsletter, discounts and special offers : <br>
+         <br>
+           <input id="newsletter" type="radio" name="newsletter" checked> Yes, please sign me up.<br>
+           <input id="no-newsletter" type="radio" name="no-newsletter"> No, thank you.
+         <p>
+
+              Choose your preferences : <br>
+       <br>
+            <input type="checkbox" name="article"> Web development<br>
+            <input type="checkbox" name="article"> Film & Tv <br>
+            <input type="checkbox" name="article"> Home.<br>
+            <input type="checkbox" name="article"> Clothing.<br>
+            <input type="checkbox" name="article"> Sports<br>
+            <input type="checkbox" name="article"> Motors<br>
+      <br>
+      <br>
+
+            <textarea id="area1" name="message1">
+      write a comment / question
+            </textarea> <p>
+
+             <input type="submit" value="Send Email"/>
+             <input type="reset" value="Clear Form"/>
+      </form>
+
+      </section>
 
 
+     <section>
+      <div class="footer">
+        <p> All rights Reserved - 2019</p>
+        <p> posted by: Renato Vidal Ballon </p>
+          <p> Alexandra Road <br>
+                Plymouth <br>
+              United Kingdom </p>
 
-
-
+    </div>
 
 
 
