--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   <div class='row'>
 
 
-                <div class='col-md-5'>
+                <div class='col-md-6'>
                   <h1> Hi! </h1><br>
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -200,8 +200,13 @@
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                   when an unknown printer took a galley of type and scrambled it to make.
+			Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  It has survived not only five centuries, but also the leap into electronic typesetting,
+                  remaining essentially unchanged.
             </div>
-            <div class='col-md-7'>
+            <div class='col-md-5'>
               <img src="images/me.jpg" class="rounded-circle w-100" alt="me">
               </div>
 
