--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li> your opinion </li>
   </ul>
 </li>
-<li id="WebDev">WebDev
+<li id="WebDev">WebDevelop
   <ul>
       <li> Men </li>
 	  <li> Women </li>
