--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class='row'>
 
                 <div class='col-12 col-sm-7'>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-KR69gVosvk"
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/-KR69gVosvk"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
                 picture-in-picture" allowfullscreen></iframe>
               </div>
